# ykada

./: BACKLOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  ed25519_priv.pem  rust-toolchain.toml
.github/workflows/: cargo-test.yml  e2e-ykada.yml  e2e-yksign.yml  e2e-ykwallet.yml
cardano-types/: Cargo.toml
docs/: demo.mov  demo.webm
docs/milestones/: README.md  milestone1.md  pr2_plan.md
examples/: basic_signing.rs
python/test-data-generator/: main.py  pyproject.toml
scripts/: e2e_ykada.sh  e2e_yksign.sh  e2e_ykwallet.sh  restart_scdaemon.sh  test-hardware.sh  test_all.sh
src/: adapters.rs  api.rs  domain.rs  error.rs  lib.rs  logic.rs  model.rs  ports.rs  use_cases.rs  yubikey.rs
src/adapters/: fake_yubikey.rs  koios.rs  mock_yubikey.rs  mock_yubikey_tests.rs  mod.rs  yubikey_piv.rs
src/domain/: mgmt_key.rs  ops.rs  policy.rs
src/logic/: address.rs  banner.rs  bech32_encoding.rs  coin_selection.rs  derive_key.rs  firmware.rs  mod.rs
src/model/: account_balance.rs  algorithm.rs  cardano_address.rs  cardano_key.rs  derivation_path.rs  generated_wallet.rs  key_material.rs  mgmt_key.rs  mod.rs  network.rs  pin.rs  policy.rs  seed_phrase.rs  send_mode.rs  slot.rs  tx_hash.rs  utxo.rs  wallet_config.rs  wallet_info.rs
src/ports/: balance_fetcher.rs  contract_tests.rs  device_finder.rs  device_reader.rs  key_manager.rs  mgmt_key_verifier.rs  mod.rs  pin_verifier.rs  signer.rs  slot_policy_reader.rs  tip_fetcher.rs  tx_submitter.rs  utxo_fetcher.rs
src/use_cases/: build_transaction.rs  fetch_balance.rs  generate_key.rs  generate_wallet.rs  import_key.rs  import_seed.rs  mod.rs  read_slot_policy.rs  send_ada.rs  sign_data.rs  sign_external_tx.rs  wallet_info.rs
src/yubikey/: piv.rs
tests/: integration_test.rs
yubikey-piv/: Cargo.toml
yubikey-piv/src/: lib.rs
yubikey-piv/tests/: integration_test.rs
