[package]
name = "ykada"
version = "0.1.0"
edition = "2021"

# Feature Flags:
# - `cli` (default): Includes the command-line interface binary
# - `hardware-tests`: Enables hardware tests that require YubiKey device
#
# Usage:
# - As a library only: `ykada = { version = "0.1", default-features = false }`
# - With CLI (default): `ykada = "0.1"`
# - Install CLI tool: `cargo install ykada`
# - Run hardware tests: `cargo test --features hardware-tests`
# - Run ignored tests: `cargo test --ignored` (alternative)

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap-verbosity-flag", "dep:tracing-subscriber"]
hardware-tests = []

[[bin]]
name = "ykada"
required-features = ["cli"]

[dependencies]
# Core library dependencies (always included)
anyhow = "1.0.100"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
hex = "0.4.3"
thiserror = "2.0"
tracing = "0.1"
yubikey = { git = "https://github.com/mproofs/yubikey.rs", branch = "curve_25519", features = [
  "untested",
] }

# BIP39/BIP32 dependencies
bip39 = "2.0"
bip32 = "0.5"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
ed25519-bip32 = "0.4"

# Encoding
bech32 = "0.9"

# CLI dependencies (optional, only with "cli" feature)
clap = { version = "4.5.53", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# Development/testing only
env_logger = "0.11.8"

[dev-dependencies]
assert_cmd = "=2.0.17"
rand = "0.9"
