[package]
name = "ykada"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/akonior/ykada"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap-verbosity-flag", "dep:tracing-subscriber"]
hardware-tests = []

[[bin]]
name = "ykada"
required-features = ["cli"]

[dependencies]
# Core library dependencies (always included)
anyhow = "1.0.100"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
hex = "0.4.3"
thiserror = "2.0"
tracing = "0.1"
yubikey = { git = "https://github.com/akonior/yubikey.rs", branch = "main", features = [
  "untested",
] }

# BIP39/BIP32 dependencies
bip39 = "2.0"
bip32 = "0.5"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
ed25519-bip32 = "0.4"

# Encoding
bech32 = "0.9"
blake2 = "0.10"

# CLI dependencies (optional, only with "cli" feature)
clap = { version = "4.5.53", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

rand = "0.9"
rand_core = "0.9"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }

# Cardano transaction building
pallas-txbuilder = "0.35"
pallas-addresses = "0.35"
pallas-crypto = "0.35"
pallas-primitives = "0.35"
serde_json = "1"

# Development/testing only
env_logger = "0.11.8"

[dev-dependencies]
assert_cmd = "=2.0.17"
predicates = "3.1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
